// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project/View default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eLExRp cfgFGU"
  >
    <div>
      <div
        className="sc-fBuWsC jtIdEp"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="sc-fMiknA bxZCMx"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className="sc-dVhcbM fghLuF"
          >
            <div
              className="sc-fMiknA bxZCMx"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Project Name
              </h1>
            </div>
          </div>
          <div
            className="sc-eqIVtm jwtJAm"
          >
            <ul
              className="sc-fAjcbJ sc-caSCKo jdlBiQ"
            >
              <li
                className="sc-kjoXOD sc-cHGsZl MsFPR"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="sc-fAjcbJ sc-gisBJw TKJlq"
            >
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="sc-eXEjpC fuVqJC"
      >
        <div
          className="sc-esjQYD cNBMAh"
        >
          <a
            active={true}
            className="sc-kIPQKe eHwaeb"
            href="/project/100"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
          <a
            active={false}
            className="sc-kIPQKe jbWkZw"
            href="/project/100/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
          <a
            active={false}
            className="sc-kIPQKe jbWkZw"
            href="/project/100/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
      </div>
      <div
        className="sc-cbkKFq jnowth"
      >
        <ul
          className="sc-eerKOB eCHVZl"
        >
          <li
            className="sc-emmjRN bmPYTe"
          >
            <div
              id="projectDataSources"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
                  className="sc-cpmLhU jEfXNz"
                >
                  Data Sources
                </span>
              </div>
              <span
                className="sc-dymIpo jcdYlU"
                id="projectDataSourcesValue"
              >
                3
              </span>
            </div>
          </li>
          <li
            className="sc-emmjRN bmPYTe"
          >
            <div
              id="projectUsers"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderTop": "2px solid #FFF",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "padding": "12px 14px 14px",
                }
              }
            >
              <div
                style={
                  Object {
                    "color": undefined,
                    "fontSize": "12px",
                    "marginBottom": "14px",
                  }
                }
              >
                <span
                  className="sc-cpmLhU jEfXNz"
                >
                  Users
                </span>
              </div>
              <span
                className="sc-dymIpo jcdYlU"
                id="projectUsersValue"
              >
                2
              </span>
            </div>
          </li>
        </ul>
        <ul
          className="sc-krvtoX gHtgrw"
        >
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldLastUpdated"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldLastUpdatedLabel"
              >
                Last Update
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldLastUpdatedValue"
              >
                3 months ago
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldLastUpdatedEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldStatus"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldStatusLabel"
              >
                Status
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldStatusValue"
              >
                Status
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldStatusEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldOwner"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldOwnerLabel"
              >
                Owner
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldOwnerValue"
              >
                Firstname Lastname
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldOwnerEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldTitle"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldTitleLabel"
              >
                Title
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldTitleValue"
              >
                Project Name
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldTitleEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldDescription"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldDescriptionLabel"
              >
                Description
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldDescriptionValue"
              >
                Description
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldDescriptionEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
          <li
            className="sc-fYiAbW gEINri"
          >
            <div
              className="sc-fOKMvo lgXOgG"
              id="fieldSlug"
            >
              <span
                className="sc-dUjcNx exyTYK"
                id="fieldSlugLabel"
              >
                API
              </span>
              <span
                className="sc-eilVRo iMKfkS"
                id="fieldSlugValue"
              >
                schemacms/api/project_title
              </span>
            </div>
            <div
              className="sc-gHboQg bWlZSX"
              id="fieldSlugEditButton"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-iwsKbI iKbLSk"
      >
        <div
          className="sc-dnqmqq XuhPC"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Project/View loading 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-eLExRp cfgFGU"
  >
    <div>
      <div
        className="sc-fBuWsC jtIdEp"
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": "18px",
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="sc-fMiknA bxZCMx"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <button
            disabled={false}
            id="topHeaderOpenMenuBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": 6,
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#000",
              "color": "#FFF",
              "maxWidth": null,
              "minHeight": "100vh",
              "padding": "18px 20px 27px",
              "position": "fixed",
              "right": 0,
              "textAlign": "left",
              "top": 0,
              "transform": "translateX(100%)",
              "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
              "visibility": 0,
              "width": "100%",
              "zIndex": 9999,
            }
          }
        >
          <div
            className="sc-dVhcbM fghLuF"
          >
            <div
              className="sc-fMiknA bxZCMx"
            >
              <h2
                id="headerTitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 100,
                    "margin": 0,
                  }
                }
              >
                Project
              </h2>
              <h1
                id="headerSubtitle"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-eqIVtm jwtJAm"
          >
            <ul
              className="sc-fAjcbJ sc-caSCKo jdlBiQ"
            >
              <li
                className="sc-kjoXOD sc-cHGsZl MsFPR"
              >
                <a
                  href="/project/100/datasource"
                  id={null}
                  onClick={[Function]}
                >
                  Data Sources
                </a>
              </li>
            </ul>
            <ul
              className="sc-fAjcbJ sc-gisBJw TKJlq"
            >
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
              >
                <a
                  href="/project/edit/100"
                  id={null}
                  onClick={[Function]}
                >
                  Edit Project Settings
                </a>
              </li>
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
                id={null}
                onClick={[Function]}
              >
                Delete Project
              </li>
              <li
                className="sc-kjoXOD sc-TOsTZ ilJnaW"
              >
                <a
                  href="/logout"
                  id={null}
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </li>
            </ul>
          </div>
          <button
            disabled={false}
            id="topHeaderCloseMenuButton"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "position": "absolute",
                "right": 0,
                "top": "6px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="sc-eXEjpC fuVqJC"
      >
        <div
          className="sc-esjQYD cNBMAh"
        >
          <a
            active={true}
            className="sc-kIPQKe eHwaeb"
            href="/project/100"
            onClick={[Function]}
          >
            <span>
              Settings
            </span>
          </a>
          <a
            active={false}
            className="sc-kIPQKe jbWkZw"
            href="/project/100/datasource"
            onClick={[Function]}
          >
            <span>
              Sources
            </span>
          </a>
          <a
            active={false}
            className="sc-kIPQKe jbWkZw"
            href="/project/100/user"
            onClick={[Function]}
          >
            <span>
              Users
            </span>
          </a>
        </div>
      </div>
      <div
        className="sc-VigVT igYVnG"
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-iwsKbI iKbLSk"
      >
        <div
          className="sc-dnqmqq XuhPC"
        >
          <button
            disabled={false}
            id="addProjectBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
